--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li>Andy <a href="https://img.erealmsoft.com/tech-share/ppt/使用Unity开发AR应用.pptx" target="_blank">AR应用</a></li>
                 <li>Ken <a href="https://note.youdao.com/share/?id=86842f8d4beb0b1170cc62be92787206&type=note#/" target="_blank">2018，Web技术展望</a></li>
                 <li>秦杰 <a href="https://mubu.com/doc/3IGkH5e0y7?from=singlemessage&isappinstalled=0" target="_blank">Ubuntu从安装到使用</a></li>
-                <li>Lyndon <a href="2018-01-13/lyndon/index.html" target="_blank">运用tweenJs和canvas开发动画</a></li>
+                <li>Lyndon <a href="2018-01-13/Lyndon/index.html" target="_blank">运用tweenJs和canvas开发动画</a></li>
             </ul>
         </section>
     </div>
